<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/colorPrimaryDark" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:isScrollContainer="true" android:fadeScrollbars="true" android:overScrollMode="always" android:nestedScrollingEnabled="true">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:typeface="normal" android:textColor="@android:color/white" android:id="@+id/textView8" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/qpi_label" android:fontFamily="sans-serif" android:textAlignment="center" android:letterSpacing="0.3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:textSize="75sp" android:typeface="sans" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/your_qpi_LBL" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/qpi_placeholder" android:lineSpacingExtra="0sp" android:fontFamily="sans-serif" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <View android:id="@+id/divider2" android:background="@color/colorPrimaryDark" android:layout_width="300dp" android:layout_height="0.5dp" android:layout_marginTop="130dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="parent"/>
    <android.support.constraint.ConstraintLayout android:id="@+id/constraintLayout" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/divider2">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:typeface="normal" android:textColor="@android:color/white" android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/min_qpi_label" android:fontFamily="sans-serif" android:textAlignment="center" android:letterSpacing="0.3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/units_left_TXBX"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/textView" android:layout_width="0dp" android:layout_height="30dp" android:layout_marginTop="20dp" android:text="@string/target_qpi_label" android:fontFamily="sans-serif" android:textAlignment="center" android:letterSpacing="0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <EditText android:id="@+id/desired_QPI_TXBX" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/target_qpi_textbox" android:ems="10" android:inputType="numberDecimal" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <EditText android:textColor="@android:color/white" android:id="@+id/units_left_TXBX" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/units_left_textbox" android:ems="10" android:inputType="number" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/desired_QPI_TXBX"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:textSize="75sp" android:typeface="sans" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/minimum_required_LBL" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="@string/qpi_placeholder" android:lineSpacingExtra="0sp" android:fontFamily="sans-serif" android:textAlignment="center" app:autoSizeMaxTextSize="75sp" app:autoSizeMinTextSize="10sp" app:autoSizeStepGranularity="1sp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
