<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/s" android:background="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout android:id="@+id/sc" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:isScrollContainer="true" android:overScrollMode="always" android:nestedScrollingEnabled="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:textSize="20sp" android:textStyle="bold" android:id="@+id/textView5" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/sis_title" android:lineSpacingExtra="8sp" android:textAlignment="center" android:layout_marginStart="50dp" android:layout_marginEnd="50dp" android:letterSpacing="0.3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
            <TextView android:textSize="10sp" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/sis_please" android:letterSpacing="0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.501" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
            <ImageView android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="200dp" android:layout_marginTop="30dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/sis"/>
            <EditText android:textSize="14sp" android:id="@+id/sis_username" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="@string/sis_username" android:ems="10" android:inputType="textPersonName" android:textAlignment="center" android:layout_marginStart="70dp" android:layout_marginEnd="70dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
            <EditText android:textSize="14sp" android:id="@+id/sis_password" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="@string/sis_password" android:ems="10" android:inputType="textPassword" android:textAlignment="center" android:layout_marginStart="70dp" android:layout_marginEnd="70dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/sis_username"/>
            <TextView android:textSize="10sp" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sis_school" android:letterSpacing="0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
            <TextView android:id="@+id/textView14" android:layout_width="wrap_content" android:layout_height="30dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/sis_login_btn"/>
            <ProgressBar android:id="@+id/progressBar" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginTop="20dp" android:indeterminate="true" android:alpha="0" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/sis_password" style="?android:attr/progressBarStyle"/>

            <Button
                android:id="@+id/sis_login_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/toast_frame"
                android:backgroundTint="@color/colorAccent"
                android:includeFontPadding="false"
                android:text="LOGIN"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sis_password" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <Button android:id="@+id/back_BTN" android:background="@android:drawable/ic_menu_close_clear_cancel" android:padding="30dp" android:layout_width="30dp" android:layout_height="30dp" android:layout_marginTop="10dp" android:layout_marginStart="10dp" android:backgroundTint="@android:color/white" android:backgroundTintMode="multiply" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.AppCompat.Button.Borderless"/>
</android.support.constraint.ConstraintLayout>
